--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -36,3 +36,185 @@ p {
 a {
     font-size: 13px;
 }
+
+
+
+
+/* nav */
+.navbar {
+    position: static !important;
+    top: 0%;
+    left: 0%;
+    transition: top 1s ease-out 0s !important;
+    width: 100% !important;
+    z-index: 200;
+    min-height: 60px;
+    border-bottom: 3px solid var(--color);
+    z-index: 5;
+
+}
+
+.modal-backdrop {
+    z-index: -1 !important;
+}
+
+/* .modal {
+    position: relative;
+    z-index: 8225;
+    font-family: 'Rubik', sans-serif;
+} */
+
+.modal .modal-header {
+    color: var(--color);
+}
+
+.navbar .navbar-brand {
+    width: 5%;
+    height: 100%;
+}
+
+.navbar .navbar-brand img {
+    width: 100%;
+    height: 100%    ;
+}
+
+/* Remove border from toggler */
+.navbar-toggler {
+    border: 0 !important;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none !important;
+    box-shadow: none !important;
+    border: 0 !important;
+}
+
+/* Lines of the Toggler */
+.toggler-icon {
+    width: 30px;
+    height: 3px;
+    background-color: var(--color);
+    display: block;
+    transition: all 0.2s;
+}
+
+/* Adds Space between the lines */
+.middle-bar {
+    margin: 5px auto;
+}
+
+/* State when navbar is opened (START) */
+.navbar-toggler .top-bar {
+    transform: rotate(45deg);
+    transform-origin: 10% 10%;
+}
+
+.navbar-toggler .middle-bar {
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
+.navbar-toggler .bottom-bar {
+    transform: rotate(-45deg);
+    transform-origin: 10% 90%;
+}
+
+/* State when navbar is opened (END) */
+
+/* State when navbar is collapsed (START) */
+.navbar-toggler.collapsed .top-bar {
+    transform: rotate(0);
+}
+
+.navbar-toggler.collapsed .middle-bar {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+
+.navbar-toggler.collapsed .bottom-bar {
+    transform: rotate(0);
+}
+
+/* State when navbar is collapsed (END) */
+
+/* Color of Toggler when collapsed */
+.navbar-toggler.collapsed .toggler-icon {
+    background-color: var(--color);
+}
+
+.nav-contacts {
+    display: flex;
+    align-items: center;
+
+}
+
+.nav-contacts .nav-icons {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color);
+    border-radius: 10px;
+
+}
+
+.navbar .navbar-nav .nav-item .nav-link {
+    color: var(--black);
+    font-size: 12px !important;
+    transition: 0.5s;
+    text-transform: uppercase;
+
+}
+
+.navbar .navbar-nav .nav-item .nav-link i {
+    transition: 0.3s;
+}
+
+.navbar .navbar-nav .nav-item .nav-link:hover {
+    color: var(--gray);
+}
+
+.navbar .navbar-nav .nav-item .nav-link:hover i {
+    transform: rotate(180deg);
+    color: var(--color);
+}
+
+.navbar .navbar-nav .nav-item .nav-link:hover .fa-plus {
+    transform: rotate(135deg);
+}
+
+.navbar .active {
+    color: var(--color) !important;
+    font-weight: 700;
+}
+
+.nav-contacts .nav-icons i {
+    color: var(--white);
+}
+
+.nav-group {
+    text-decoration: none;
+}
+
+.nav-group .nav-contact-details {
+    color: var(--black);
+}
+
+.nav-group .nav-contact-details span:hover {
+    color: var(--gray);
+}
+
+
+
+
+
+
+@media screen and (max-width:900px) {
+    .navbar .navbar-brand {
+        width: 50%;
+        height: 100%;
+    }
+}
